--- a/translations/ca.json
+++ b/translations/ca.json
@@ -1,6 +1,61 @@
 {
   "Home": "Inici",
-  "DOI Search": "Cercador DOI",
-  "Prefix Information": "Informació Prefix",
-  "Members": "Membres"
+  "DOI Search": "Cerca DOI",
+  "Prefix Information": "Informació de Prefix",
+  "Members": "Membres",
+  "Contact": "Contacte",
+  "About": "Sobre nosaltres",
+  "Search": "Cerca",
+  "Legal warning": "Avís legal",
+  "Information about DOIs and CrossRef prefixes": "Informació sobre DOIs i Prefixos CrossRef",
+  "Prefix: Member Information": "Prefix: Informació",
+  "Prefix: DOI List": "Prefix: Llista de DOIs",
+  "Prefix: DOI List (CSV file)": "Prefix: Llista de DOIs (fitxer CSV)",
+  "Member Search": "Cerca de Membre",
+  "Prefix: DOIs and ORCIDs": "Prefix: DOIs i ORCIDs",
+  "Prefix: Member Information Description": "Des d'un prefix de DOI (per exemple, 10.5821), recupera el nombre total de DOIs registrats per aquesta institució, així com el nombre de DOIs per tipus de document. A més, per a cada tipus de document, es pot veure la cobertura de metadades i gràfics basats en la data de publicació i la primera data de dipòsit.",
+  "Prefix: DOI List Description": "Recupera una llista paginada amb la informació (títol, DOI, data de dipòsit i tipus de document) de tots els DOIs per a un prefix donat. Permet filtrar mitjançant una consulta de cerca lliure, data i tipus de document.",
+  "Prefix: DOI List (CSV file) Description": "Descarrega un fitxer CSV amb els resultats de la consulta. \n- Fitxer CSV: DOI, URL, tipus de document, primera data de dipòsit, última data de dipòsit i títol.",
+  "DOI Search Description": "Permet cercar un DOI i recuperar les metadades més importants: editor, tipus de document, títol, autors, data de publicació, primera data de dipòsit i la URL.",
+  "Member Search Description": "Permet cercar pel nom de la institució. Recupera el prefix de la institució, la ubicació i el nombre total de DOIs. Mostra els resultats en una llista paginada.",
+  "Prefix: DOIs and ORCIDs Description": "Recupera una llista dels DOIs o ORCIDs més referenciats d'una institució (basat en el prefix). \n- DOI: Nombre de vegades que un DOI és referenciat per altres DOIs de Crossref. \n- ORCID: Nombre de vegades que un ORCID és referenciat per altres DOIs de Crossref",
+  "DOI Information": "Informació de DOI",
+  "Title": "Títol",
+  "Type": "Tipus",
+  "Count": "Compte",
+  "Authors": "Autors",
+  "Referenced": "Referenciat",
+  "Referenced Info": "Nombre de vegades que aquest DOI és referenciat per altres DOIs de Crossref",
+  "Publication date":"Data de publicació",
+  "First deposited date": "Primera data de dipòsit",
+  "Last deposited date": "Última data de dipòsit",
+  "Member Information": "Informació",
+  "DOI List": "Llista de DOIs",
+  "Most referenced DOIs": "DOIs més referenciats",
+  "Most referenced ORCIDs": "ORCIDs més referenciats",
+  "Total number of deposited DOIs": "Nombre total de DOIs dipositats",
+  "Coverage": "Cobertura",
+  "Publication": "Publicació",
+  "Deposited": "Dipositat",
+  "Selected": "Seleccionat",
+  "Coverage Info": "Percentatge d'elements de contingut que inclouen aquests valors en les seves metadades",
+  "Chart published date": "Gràfic de data de publicació",
+  "Chart published date Info": "Mostra el nombre d'elements per any de publicació",
+  "Chart first deposited date": "Gràfic de primera data de dipòsit",
+  "Chart first deposited date info": "Mostra el nombre d'elements per any de dipòsit a CrossRef",
+  "published by years": " publicats per anys",
+  "first deposited by years": " 'data de primer dipòsit' per anys",
+  "slow query message": "Aquesta consulta triga una estona perquè realitza múltiples sol·licituds a l'API de CrossRef per recuperar totes les dades. Si us plau, tingui paciència.",
+  "slow query title": "Advertència: consulta lenta",
+  "Free form search": "'Free form search' Ex: treballs que inclouen 'arquitectura' o 'Fran' (o tots dos)",
+  "Start deposited date": "Data d'inici",
+  "End deposited date": "Data de fin",
+  "Document Type": "Tipus de document",
+  "Document Type All": "Tots",
+  "Filter": "Filtre",
+  "results 10000": "S'han recuperat més de 10,000 resultats, si us plau, afini la seva cerca per limitar el nombre de resultats i habilitar la paginació.",
+  "Members list": "Llista de Membres",
+  "Members list Info": "Introdueix el 'nom del membre'. Es poden fer, per exemple, treballs que inclouen 'universitat' o 'universitat politècnica'",
+  "Location": "Ubicació",
+  "DOI Prefixes": "Prefixos de DOI"
 }
