--- a/translations/es.json
+++ b/translations/es.json
@@ -1,6 +1,61 @@
 {
   "Home": "Inicio",
-  "DOI Search": "Búsqueda de DOI",
+  "DOI Search": "Buscar DOI",
   "Prefix Information": "Información de Prefijo",
-  "Members": "Miembros"
+  "Members": "Miembros",
+  "Contact": "Contacto",
+  "About": "Acerca de",
+  "Search": "Buscar",
+  "Legal warning": "Aviso legal",
+  "Information about DOIs and CrossRef prefixes": "Información sobre DOIs y Prefijos CrossRef",
+  "Prefix: Member Information": "Prefijo: Información",
+  "Prefix: DOI List": "Prefijo: Lista de DOIs",
+  "Prefix: DOI List (CSV file)": "Prefijo: Lista de DOIs (archivo CSV)",
+  "Member Search": "Buscar Miembro",
+  "Prefix: DOIs and ORCIDs": "Prefijo: DOIs y ORCIDs",
+  "Prefix: Member Information Description": "A partir de un prefijo de DOI (por ejemplo, 10.5821), obtiene el número total de DOIs registrados por esa institución, así como el número de DOIs por tipo de documento. Además, para cada tipo de documento, puedes ver la cobertura de metadatos y gráficos basados en la fecha de publicación y la fecha de primer depósito.",
+  "Prefix: DOI List Description": "Obtiene una lista paginada con la información (título, DOI, fecha de depósito y tipo de documento) de todos los DOIs para un prefijo dado. Permite filtrar a través de una consulta de búsqueda de formato libre, fecha y tipo de documento.",
+  "Prefix: DOI List (CSV file) Description": "Descarga un archivo CSV con los resultados de la consulta. \n- Archivo CSV: DOI, URL, tipo de documento, fecha de primer depósito, fecha de último depósito y título.",
+  "DOI Search Description": "Permite buscar un DOI y recuperar los metadatos más importantes: editor, tipo de documento, título, autores, fecha de publicación, fecha de primer depósito y la URL.",
+  "Member Search Description": "Permite buscar por el nombre de la institución. Recupera el prefijo de la institución, la ubicación y el número total de DOIs. Muestra los resultados en una lista paginada.",
+  "Prefix: DOIs and ORCIDs Description": "Obtiene una lista de los DOIs o ORCIDs más referenciados de una institución (basado en el prefijo). \n- DOI: Número de veces que un DOI es referenciado por otros DOIs de Crossref. \n- ORCID: Número de veces que un ORCID es referenciado por otros DOIs de Crossref",
+  "DOI Information": "Información de DOI",
+  "Title": "Título",
+  "Type": "Tipo",
+  "Count": "Conteo",
+  "Authors": "Autores",
+  "Referenced": "Referenciado",
+  "Referenced Info": "Número de veces que este DOI es referenciado por otros DOIs de Crossref",
+  "Publication date":"Fecha de publicación",
+  "First deposited date": "Fecha de primer depósito",
+  "Last deposited date": "Fecha de último depósito",
+  "Member Information": "Información",
+  "DOI List": "Lista de DOIs",
+  "Most referenced DOIs": "DOIs más referenciados",
+  "Most referenced ORCIDs": "ORCIDs más referenciados",
+  "Total number of deposited DOIs": "Número total de DOIs depositados",
+  "Coverage": "Cobertura",
+  "Publication": "Publicación",
+  "Deposited": "Depositado",
+  "Selected": "Seleccionado",
+  "Coverage Info": "Porcentaje de elementos de contenido que incluyen estos valores en sus metadatos",
+  "Chart published date": "Gráfico de fecha de publicación",
+  "Chart published date Info": "Muestra el número de elementos por año de publicación",
+  "Chart first deposited date": "Gráfico de fecha de primer depósito",
+  "Chart first deposited date info": "Muestra el número de elementos por año de depósito en CrossRef",
+  "published by years": " publicados por años",
+  "first deposited by years": " 'fecha de primer depósito' por años",
+  "slow query message": "Esta consulta tarda un tiempo porque realiza múltiples solicitudes a la API de CrossRef para recuperar todos los datos. Por favor, ten paciencia.",
+  "slow query title": "Advertencia: consulta lenta",
+  "Free form search": "'Free form search' Ej: trabajos que incluyen 'arquitectura' o 'Fran' (o ambos)",
+  "Start deposited date": "Fecha de inicio",
+  "End deposited date": "Fecha de fin",
+  "Document Type": "Tipo de documento",
+  "Document Type All": "Todos",
+  "Filter": "Filtro",
+  "results 10000": "Se han recuperado más de 10,000 resultados, por favor, refina tu búsqueda para limitar el número de resultados y poder paginarla",
+  "Members list": "Lista de Miembros",
+  "Members list Info": "Inserta el 'nombre del miembro'. Puedes, por ejemplo, buscar trabajos que incluyan 'universitat' o 'universitat politecnica'",
+  "Location": "Ubicación",
+  "DOI Prefixes": "Prefijos de DOI"
 }
