--- a/translations/en.json
+++ b/translations/en.json
@@ -2,5 +2,60 @@
   "Home": "Home",
   "DOI Search": "DOI Search",
   "Prefix Information": "Prefix Information",
-  "Members": "Members"
+  "Members": "Members",
+  "Contact": "Contact",
+  "About": "About",
+  "Search": "Search",
+  "Legal warning": "Legal warning",
+  "Information about DOIs and CrossRef prefixes": "Information about DOIs and CrossRef prefixes",
+  "Prefix: Member Information": "Prefix: Member Information",
+  "Prefix: DOI List": "Prefix: DOI List",
+  "Prefix: DOI List (CSV file)": "Prefix: DOI List (CSV file)",
+  "Member Search": "Member Search",
+  "Prefix: DOIs and ORCIDs": "Prefix: DOIs and ORCIDs",
+  "Prefix: Member Information Description": "From a DOI prefix (e.g., 10.5821), it retrieves the total number of registered DOIs by that institution, as well as the number of DOIs by document type. Additionally, for each document type, you can view the metadata coverage and graphs based on publication date and first deposit date",
+  "Prefix: DOI List Description": "It retrieves a paginated list with the information (title, DOI, deposit date, and document type) of all DOIs for a given prefix. It allows for filtering through a free-form search query, date and document type.",
+  "Prefix: DOI List (CSV file) Description": "Download CSV file with the results of the query. \n - CSV file: DOI, URL, document type, first deposited date, last deposited date and title.",
+  "DOI Search Description": "It allows you to search for a DOI and retrieve the most important metadata: publisher, document type, title, authors, publication date, first deposit date, and the URL.",
+  "Member Search Description": "Enables searching by institution name. Retrieves the institution's prefix, location, and the total number of DOIs. Displays the results in a paginated list.",
+  "Prefix: DOIs and ORCIDs Description": "It retrieves a list of the most referenced DOIs or ORCIDs from an institution (based on the prefix). \n- DOI: Number of times that a DOI is referenced by other Crossref DOIs. \n- ORCID: Number of times that an ORCID is referenced by other Crossref DOIs",
+  "DOI Information": "DOI Information",
+  "Title": "Title",
+  "Type": "Type",
+  "Count": "Count",
+  "Authors": "Authors",
+  "Referenced": "Referenced",
+  "Referenced Info": "Number of times this DOI is referenced by other Crossref DOIs",
+  "Publication date":"Publication date",
+  "First deposited date": "First deposited date",
+  "Last deposited date": "Last deposited date",
+  "Member Information": "Member Information",
+  "DOI List": "DOI List",
+  "Most referenced DOIs": "Most referenced DOIs",
+  "Most referenced ORCIDs": "Most referenced ORCIDs",
+  "Total number of deposited DOIs": "Total number of deposited DOIs",
+  "Coverage": "Coverage",
+  "Publication": "Publication",
+  "Deposited": "Deposited",
+  "Selected": "Selected",
+  "Coverage Info": "Percentage of content items that include this values in their metadata",
+  "Chart published date": "Chart published date",
+  "Chart published date Info": "Show the number of items per publication year",
+  "Chart first deposited date": "Chart first deposited date",
+  "Chart first deposited date info": "Show the number of items by year of deposit in CrossRef",
+  "published by years": " published by years",
+  "first deposited by years": " 'first deposited date' by years",
+  "slow query message": "This query takes some time because it makes multiple requests to the CrossRef API to retrieve all the data. Please be patient.",
+  "slow query title": "Warning: slow query",
+  "Free form search": "'Free form search' Ex: works that include 'architecture' or 'Fran' (or both)",
+  "Start deposited date": "Start date",
+  "End deposited date": "End date",
+  "Document Type": "Document Type",
+  "Document Type All": "All",
+  "Filter": "Filter",
+  "results 10000": "More than 10,000 results have been retrieved, please refine your search to limit the number of results and enable pagination.",
+  "Members list": "Members list",
+  "Members list Info": "Insert the 'member name'. Can be made, for example, works that include 'universitat' or 'universitat politecnica'",
+  "Location": "Location",
+  "DOI Prefixes": "DOI Prefixes"
 }
