--- a/translations/ca.json
+++ b/translations/ca.json
@@ -1,7 +1,7 @@
 {
   "Home": "Inici",
   "DOI Search": "Cerca DOI",
-  "Prefix Information": "Informació de Prefix",
+  "Prefix Information": "Prefix",
   "Members": "Membres",
   "Contact": "Contacte",
   "About": "Sobre nosaltres",
