--- a/translations/en.json
+++ b/translations/en.json
@@ -1,7 +1,7 @@
 {
   "Home": "Home",
   "DOI Search": "DOI Search",
-  "Prefix Information": "Prefix Information",
+  "Prefix Information": "Prefix",
   "Members": "Members",
   "Contact": "Contact",
   "About": "About",
