--- a/translations/es.json
+++ b/translations/es.json
@@ -1,7 +1,7 @@
 {
   "Home": "Inicio",
   "DOI Search": "Buscar DOI",
-  "Prefix Information": "Información de Prefijo",
+  "Prefix Information": "Prefijo",
   "Members": "Miembros",
   "Contact": "Contacto",
   "About": "Acerca de",
