add links citations

--- a/translations/ca.json
+++ b/translations/ca.json
@@ -22,7 +22,7 @@
   "DOI Information": "Informació de DOI",
   "Title": "Títol",
   "Type": "Tipus",
-  "Count": "Compte",
+  "Count": "Cites",
   "Authors": "Autors",
   "Referenced": "Referenciat",
   "Referenced Info": "Nombre de vegades que aquest DOI és referenciat per altres DOIs de Crossref",
