--- a/translations/en.json
+++ b/translations/en.json
@@ -22,7 +22,7 @@
   "DOI Information": "DOI Information",
   "Title": "Title",
   "Type": "Type",
-  "Count": "Count",
+  "Count": "Citations",
   "Authors": "Authors",
   "Referenced": "Referenced",
   "Referenced Info": "Number of times this DOI is referenced by other Crossref DOIs",
