--- a/translations/es.json
+++ b/translations/es.json
@@ -22,7 +22,7 @@
   "DOI Information": "Información de DOI",
   "Title": "Título",
   "Type": "Tipo",
-  "Count": "Conteo",
+  "Count": "Citas",
   "Authors": "Autores",
   "Referenced": "Referenciado",
   "Referenced Info": "Número de veces que este DOI es referenciado por otros DOIs de Crossref",
